--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,30 +1,22 @@
-name: Publish
 
+name: Publish
 on:
- workflow_dispatch:
- push:
-  branches:
-  - main
+  workflow_dispatch: null
+  push:
+    branches:
+      - main
 jobs:
   publish:
-   run-on: ubuntu-latest  
-   
-     steps: 
+    runs-on: ubuntu-latest
+    steps:
       - uses: actions/checkout@v3
-     
-      - name: setup .NET   
+      - name: setup .NET
         uses: actions/setup-dotnet@v3
-        with:
-         dotnet-version:'8.0.x'
-  
+        with: 
+         dotnet-version: '8.0.x'
       - name: restore
         run: dotnet restore ./ArmTemplate.sln
-  
       - name: Build
         run: dotnet build ./ArmTemplate.sln --configuration Release -no--restore
-        
       - name: Publish
         run: dotnet publish ./ArmTemplate.sln --configuration Release -no--build
-      
-   
-  
