--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,6 +17,6 @@ jobs:
       - name: restore
         run: dotnet restore ./ArmTemplate.sln
       - name: Build
-        run: dotnet build ./ArmTemplate.sln --configuration Release -no--restore
+        run: dotnet build ./ArmTemplate.sln --configuration Release --no-restore
       - name: Publish
-        run: dotnet publish ./ArmTemplate.sln --configuration Release -no--build
+        run: dotnet publish ./ArmTemplate.sln --configuration Release --no-build
